v1.0.0/modules/schema/pages/class/DiscExcContIEEEDEC3A.adoc
= `DiscExcContIEEEDEC3A`
:toclevels: 4


+++IEEE type DEC3A model. In some systems, the stabilizer output is disconnected from the regulator immediately following a severe fault to prevent the stabilizer from competing with action of voltage regulator during the first swing.
Reference: IEEE 421.5-2005 12.4.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DiscExcContIEEEDEC3A`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]
**** *`DiscExcContIEEEDEC3A`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
DiscExcContIEEEDEC3A {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






DiscExcContIEEEDEC3A -> ExcitationSystemDynamics: ExcitationSystemDynamics


DiscExcContIEEEDEC3A -> RemoteInputSignal: RemoteInputSignal


DiscExcContIEEEDEC3A -> DiagramObject: DiagramObjects


DiscExcContIEEEDEC3A -> InstanceSet: InstanceSet


DiscExcContIEEEDEC3A -> Name: Names


DiscExcContIEEEDEC3A -> ChangeSetMember: PropertiesCIMDataObject


DiscExcContIEEEDEC3A -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this discontinuous excitation control model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<tdr,`tdr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Reset time delay (<i>T</i><i><sub>DR</sub></i>) (&gt;= 0).+++

| <<vtmin,`vtmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Terminal undervoltage comparison level (<i>V</i><i><sub>TMIN</sub></i>).+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..1
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this discontinuous excitation control system model.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this discontinuous excitation control model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscontinuousExcitationControlDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this discontinuous excitation control system model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscontinuousExcitationControlDynamics.RemoteInputSignal`
| Cardinality
| 0..1
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/DiscontinuousExcitationControlDynamics.adoc[`DiscontinuousExcitationControlDynamics`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tdr]
=== `tdr`
+++Reset time delay (<i>T</i><i><sub>DR</sub></i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC3A.tdr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#vtmin]
=== `vtmin`
+++Terminal undervoltage comparison level (<i>V</i><i><sub>TMIN</sub></i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DiscExcContIEEEDEC3A.vtmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


